my library remove button and read/not read button added

--- a/async/object.constructor/library.html
+++ b/async/object.constructor/library.html
@@ -20,19 +20,6 @@
     <div class="cube"></div>
     <div class="cube"></div>
 
-    <div class="wrapper" id="bookList">
-      <div class="card">
-        <img src="" alt="">
-        <div class="descriptions">
-          <p>title</p>
-          <p>author</p>
-          <p>pages</p>
-          <p>read</p>
-        </div>
-      </div>
-    </div>
-
-
     <button id="showFormButton" type="button" class="btn btn-success" >New Book</button>
     <div id="bookForm" style="display: none;">
       <form id="bookInputForm">
@@ -54,6 +41,9 @@
           <button type="submit">Add Book</button>
       </form>
     </div>
+
+    <div class="wrapper" id="bookList"></div>
+
   </div>
 
 
